kubernetes/apps/dev/supermarket/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: supermarket
  namespace: dev
  annotations:
    external-dns.alpha.kubernetes.io/target: traefik-int.ironstone.casa
spec:
  parentRefs:
  - name: traefik-internal
    namespace: network
    sectionName: websecure
  hostnames:
  - supermarket.ironstone.casa
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - name: supermarket-api
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cinc-artifacts
  namespace: dev
  annotations:
    external-dns.alpha.kubernetes.io/target: traefik-int.ironstone.casa
spec:
  parentRefs:
  - name: traefik-internal
    namespace: network
    sectionName: websecure
  hostnames:
  - cinc-artifacts.ironstone.casa
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - name: supermarket-gateway
      port: 8082
